# lift-2-deck

./: .env.example  .gitignore  .impeccable.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  run-migrations.sh
backend/migrations/00000000000001_create_users/: up.sql
backend/migrations/00000000000002_create_training_plans/: down.sql  up.sql
backend/migrations/00000000000003_create_series/: down.sql  up.sql
backend/migrations/00000000000004_create_exercises/: up.sql
backend/migrations/00000000000005_create_workout_sessions/: down.sql  up.sql
backend/migrations/00000000000006_create_session_logs/: up.sql
backend/migrations/00000000000007_create_cardio_logs/: up.sql
backend/migrations/00000000000008_create_refresh_tokens/: up.sql
backend/migrations/00000000000009_add_ai_feedback/: down.sql  up.sql
backend/migrations/00000000000011_exercises_plan_id/: down.sql  up.sql
backend/migrations/00000000000012_sessions_plan_id/: down.sql  up.sql
backend/migrations/00000000000013_session_logs_cardio_fields/: down.sql  up.sql
backend/migrations/00000000000014_drop_series/: down.sql
backend/migrations/00000000000015_drop_cardio_logs/: down.sql  up.sql
backend/migrations/00000000000016_create_catalog/: down.sql  up.sql
backend/migrations/00000000000018_catalog_global_exercises/: down.sql  up.sql
backend/migrations/00000000000019_add_profile_columns/: down.sql  up.sql
backend/migrations/00000000000020_add_avatar_crop/: down.sql  up.sql
backend/src/: config.rs  db.rs  errors.rs  main.rs  schema.rs
backend/src/auth/: dto.rs  handlers.rs  mod.rs  (+3 more)
(+96 files in other folders)
